--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ My name is Christopher Gabrielsen, but most people call me Chris. I was born in 
 
 <p><center><img src ="Kitzbuhel.jpg" 
 
-<p><center><bottom> <a href="page2.html">Page 2</a>
-<a href= "page3.html">Page 3</a> <a href="page4.html">Page 4</a>
+<p><center><bottom> <a href="index2.html">Page 2</a>
+<a href= "index3.html">Page 3</a> <a href="index4.html">Page 4</a>
 </bottom></center></p>
 </body>
 </html>
