--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ My name is Christopher Gabrielsen, but most people call me Chris. I was born in 
 		<br><li> Track </li></br>
 		<br><li> Soccer </li></br>
 
-<p><center><img src ="Kitzbuhel.jpg" 
+<p><center><img src ="kitzbuhel.jpg" 
 
 <p><center><bottom> <a href="index2.html">Page 2</a>
 <a href= "index3.html">Page 3</a> <a href="index4.html">Page 4</a>
