--- a/index4.html
+++ b/index4.html
@@ -9,8 +9,8 @@ body {border-color: black;}
 </head>
 <body>
 <p><b><center><h1 style="color:black;"> Why Bussiness Management?
-<br><center><img src = "hatchery.jpg"
-alt="" style="width:420 px;height:380px;"> <img src = "wood.jpg" style= width= "420" height= "380">
+<br><center><img src = "hatchery.JPG"
+alt="" style="width:420 px;height:380px;"> <img src = "wood.JPG" style= width= "420" height= "380">
 </p>
 <p style="padding-left: 1cm"> I chose Bussiness Management as a major  because my Eagle Scout project inspired me to explore the field. My project was raising the height of a bulkhead at my towns local shellfish hatchery. The shellfish hatchery breeds oysters to clean the water, then sells them to the town. The bulkhead needed to be raised to eliminate pollution that was being washed out into the breeding grounds, making the oysters sick. I had to manage a budget, materials, workers, tools, and everyone’s safety. I enjoyed being in charge and watching my project rise from the ground up. Once all the pieces were in place I was left with a finished product that I managed all by myself. Looking back on it I enjoyed most of process of managing a project which is why I chose this major.
 </p>
