--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ My name is Christopher Gabrielsen, but most people call me Chris. I was born in 
 
 <p><center><img src ="kitzbuhel.jpg" 
 
-<p><center><bottom> <a href="index"> Music/ Hobbies </a>
-<a href= "index2.html"> My Europe Trip </a> <a href="index3.html"> My Major </a>
+<p><center><bottom> <a href="index.html"> Home Page </a>
+<a href= "index2.html"> My Major </a> <a href="index3.html"> Europe Trip </a>
 </bottom></center></p>
 </body>
 </html>
