--- a/index2.html
+++ b/index2.html
@@ -26,8 +26,11 @@ alt="" style="width:420 px;height:380;"> <img src = "shread.JPG" height="380" wi
  </p>
 
  </p>
-<p><center><bottom><a href="page1.html">Page 1</a> <a href= "page3.html">Page 3</a>
-<a href="page4.html">Page 4</a>
+<p><center><bottom> <a href="index.html">Home Page</a> |
+<a href= "index2.html">Music/Hobbies</a> |
+<a href="index3.html">Europe Trip</a> |
+<a href="index3.html">My Major </a>
 </bottom></center></p>
+ 
 </body>
 </html>
