--- a/index4.html
+++ b/index4.html
@@ -33,8 +33,11 @@ alt="" style="width:420 px;height:380px;"> <img src = "wood.JPG" style= width= "
  data-size="large"
  data-show-count= "false">
 Follow @chrisg1141</a></center>
-<p><center><bottom><a href="page1.html">Page 1</a> <a href="page2.html">Page 2</a>
-<a href= "page3.html">Page 3</a>
+<p><center><bottom> <a href="index.html">Home Page</a> |
+<a href= "index2.html">Music/Hobbies</a> |
+<a href="index3.html">Europe Trip</a> |
+<a href="index3.html">My Major </a>
 </bottom></center></p>
+ 
 </body>
 </html>
