--- a/index3.html
+++ b/index3.html
@@ -14,13 +14,13 @@ body {border-color: black;}
 <br><center><img src = "view.JPG"
 alt="" style="" width="420" height= "380"/>
 <img src = "beer.JPG" width= "420" height= "380">
-<img src = "i8.jpg" width= "420" height= "380">
+<img src = "i8.JPG" width= "420" height= "380">
 <p style="padding-left: 1cm">One of the items on my bucket list was to snowboard in Europe, last year during my spring break that dream was made into a reality. One of my best friends invited me to Austria to ski with him and his father. After the tediious eight hour flight we finally landed in Munchen Germany, we rented a car and drove an additional four hours to Kitzbuhel which is located in Austria. We made several stops along the way including the BMW museum, and various shopping centers. The town of Kitzbuhel is located at the base of the mountain, so we literally walked from our room stright to the lift. We spent four days skiing some of the freshest and most beautiful terrain in Europe skiing for miles on end. It was deffinatly one of the best exeriences of my life. 
 </p>
 <p><center><bottom> <a href="index.html">Home Page</a> |
 <a href= "index2.html">Music/Hobbies</a> |
 <a href="index3.html">Europe Trip</a> |
-<a href="index3.html">My Major </a>
+<a href="index4.html">My Major </a>
 </bottom></center></p>
   
 </body>
