--- a/index4.html
+++ b/index4.html
@@ -8,7 +8,7 @@ body {border-color: black;}
 </style>
 </head>
 <body>
-<p><b><center><h1 style="color:black;"> Why Bussiness Management?
+ <p><b><center><h1 style="color:black;"> Why Bussiness Management? </h1>
 <br><center><img src = "hatchery.JPG"
 alt="" style="width:420 px;height:380px;"> <img src = "wood.JPG" style= width= "420" height= "380">
 </p>
