--- a/index4.html
+++ b/index4.html
@@ -36,8 +36,9 @@ Follow @chrisg1141</a></center>
 <p><center><bottom> <a href="index.html">Home Page</a> |
 <a href= "index2.html">Music/Hobbies</a> |
 <a href="index3.html">Europe Trip</a> |
-<a href="index4.html">My Major </a>
-</bottom></center></p>
+<a href="index4.html">My Major </a> |
+ <a href="index5.html">My Photography </a>
+ </bottom></center></p>
  
 </body>
 </html>
