--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ My name is Christopher Gabrielsen, but most people call me Chris. I was born in 
 <p><center><bottom> <a href="index.html">Home Page</a> |
 <a href= "index2.html">Music/Hobbies</a> |
 <a href="index3.html">Europe Trip</a> |
-<a href="index4.html">My Major </a>
+<a href="index4.html">My Major </a> |
+<a href="index5.html">My Photography </a>
 </bottom></center></p>
 </body>
 </html>
