--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,9 @@ alt="" style="width:420 px;height:380;"> <img src = "shread.JPG" height="380" wi
 <p><center><bottom> <a href="index.html">Home Page</a> |
 <a href= "index2.html">Music/Hobbies</a> |
 <a href="index3.html">Europe Trip</a> |
-<a href="index4.html">My Major </a>
+<a href="index4.html">My Major </a> |
+ <a href="index5.html">My Photography </a>
+
 </bottom></center></p>
  
 </body>
