--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,8 @@ alt="" style="" width="420" height= "380"/>
 <p><center><bottom> <a href="index.html">Home Page</a> |
 <a href= "index2.html">Music/Hobbies</a> |
 <a href="index3.html">Europe Trip</a> |
-<a href="index4.html">My Major </a>
+<a href="index4.html">My Major </a> |
+<a href="index5.html">My Photography </a>
 </bottom></center></p>
   
 </body>
