--- a/index5.html
+++ b/index5.html
@@ -22,3 +22,5 @@ alt="" style="" width="420" height= "380"/>
 <a href="index4.html">My Major </a> |
 <a href="index5.html">My Photography </a>
 </bottom></center></p>
+</body>
+</html>
